# system-monitor

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: release.yml
docs/: research-system-monitor.md
scripts/: build-plugin.js  build-plugin.ps1  install-smart-helper.ps1  uninstall-smart-helper.ps1
server/: server.js
server/collectors/: gpu.js  health.js  metrics.js  sensors.js  smart.js
skills/system-monitor/: SKILL.md
src/: gpu.rs  health.rs  lib.rs  main.rs  metrics.rs  sensors.rs  server.rs  smart.rs  util.rs
test/: server.test.js
tests/: integration.rs
