[package]
name = "system-monitor"
version = "0.3.0"
edition = "2021"
rust-version = "1.80"
description = "Local system & hardware monitoring MCP server (CPU, memory, disk, network, processes, GPU, sensors, SMART) with a unified health roll-up."
license = "MIT"
repository = "https://github.com/abmorrill4/system-monitor"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
